--- a/bot/package.json
+++ b/bot/package.json
@@ -4,7 +4,8 @@
   "description": "A Raspberry Pi Robot using Node.js running on a Junior Runt Rover",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "dependencies": {
       "raspi-io": "^6.0.1",
